
- GPR#1314: use the optional width information when formatting a boolean
  (Xavier Clerc, review by Gabriel Scherer)

* In the MSVC and Mingw ports, "Sys.rename src dst" no longer fails if
  file "dst" exists, but replaces it with file "src", like in the other ports.
  (Xavier Leroy)

- Resurrect tabulation boxes in module Format. Rewrite/extend documentation
  of tabulation boxes.

### Compiler user-interface and warnings:

- GPR##1332: fix ocamlc handling of "-output-complete-obj"

- MPR#7444, GPR#1138: trigger deprecation warning when a "deprecated"
  attribute is hidden by signature coercion
  (Alain Frisch, report by bmillwood, review by Leo White)

- GPR#896: "-compat-32" is now taken into account when building .cmo/.cma
  (Hugo Heuzard)

- GPR#948: the compiler now reports warnings-as-errors by prefixing
  them with "Error (warning ..):", instead of "Warning ..:" and
  a trailing "Error: Some fatal warnings were triggered" message.
  (Valentin Gatien-Baron, review by Alain Frisch)

* GPR#1189: allow MSVC ports to use -l option in ocamlmklib
  (David Allsopp)

- GPR#1324: ensure that flambda warning are printed only once
  (Xavier Clerc)

- MPR#7361, GPR#1248: support "ocaml.warning" in all attribute contexts, and
  arrange so that "ocaml.ppwarning" is correctly scoped by surrounding
  "ocaml.warning" attributes
  (Alain Frisch, review by Florian Angeletti and Thomas Refis)

- MPR#7472: ensure .cmi files are created atomically,
  to avoid corruption of .cmi files produced simultaneously by a run
  of ocamlc and a run of ocamlopt.
  (Xavier Leroy, from a suggestion by Gerd Stolpmann)

- MPR#7624: handle warning attributes placed on let bindings
  (Xavier Clerc, report by dinosaure, review by Alain Frisch)

- GPR#1333: turn off warning 40 by default
  (Leo White)

- GPR#1336: -thread and -vmthread option information is propagated to
  PPX rewriters.
  (Jun Furuse, review by Alain Frisch)

### Other libraries:
