@@ -2,46 +2,57 @@
 Insertion: passed
 Insertion: passed
 Removal: passed
+Update: passed
 -- Random integers, narrow range
 Insertion: passed
 Insertion: passed
 Removal: passed
+Update: passed
 -- Strings, generic interface
 Insertion: passed
 Insertion: passed
 Removal: passed
+Update: passed
 -- Strings, functorial interface
 Insertion: passed
 Insertion: passed
 Removal: passed
+Update: passed
 -- Pairs of strings
 Insertion: passed
 Insertion: passed
 Removal: passed
+Update: passed
 -- Lists of strings
 Insertion: passed
 Insertion: passed
 Removal: passed
+Update: passed
 -- Weak K1 -- Strings, functorial interface
 Insertion: passed
 Insertion: passed
 Removal: passed
+Update: passed
 -- Weak K1 -- Pairs of strings
 Insertion: passed
 Insertion: passed
 Removal: passed
+Update: passed
 -- Weak K2 -- Pairs of strings
 Insertion: passed
 Insertion: passed
 Removal: passed
+Update: passed
 -- Weak K1 -- Lists of strings
 Insertion: passed
 Insertion: passed
 Removal: passed
+Update: passed
 -- Weak Kn -- Arrays of strings
 Insertion: passed
 Insertion: passed
 Removal: passed
+Update: passed
 1000 elements
 100,2
 200,4
